# Cravvy

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  docker-compose.yaml  main.py  pyproject.toml
src/: __init__.py
src/api/: __init__.py  app.py
src/api/lifecycle/: __init__.py  shutdown.py  startup.py
src/api/middleware/: __init__.py  error_handler.py  request_id.py
src/api/routes/: __init__.py  health.py
src/auth/: __init__.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
src/chat/: __init__.py
src/components/: __init__.py
src/components/llm/: __init__.py  client.py  providers.py  schemas.py  service.py
src/components/mcp/: __init__.py  gateway.py  http.py
src/components/mcp/tools/: __init__.py  edamam.py  google_maps.py  indb.py  swiggy_dineout.py  swiggy_food.py  swiggy_instamart.py  zepto.py  zomato.py
src/components/optimization/: __init__.py
src/components/recommendation/: __init__.py
src/core/: __init__.py
src/core/interfaces/: __init__.py
src/core/models/: __init__.py
src/core/pipeline/: __init__.py
src/integrations/: __init__.py
src/meals/: __init__.py
src/shared/: __init__.py  config.py  database.py  encryption.py  exceptions.py
src/users/: __init__.py  router.py  schemas.py  service.py
tests/: __init__.py
tests/eval/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py
